--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: [ABC]
-description: [A short description of your site's purpose]
+title: [MYOB Web Application AccountRight Sample in ASP.NET C#]
+description: [Web application developed in asp.net c# to for reporting and automatic backup purpose for company file in myob cloud.]
 plugins:
   - jekyll-seo-tag
